feat: modify index.hbs & css

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,4 @@
-<h1>This is for index</h1>
+<form class="submit-form" action="/url" method="post">
+  <input class="submit-form-input" type="text" placeholder="Input URL here" name="original_url">
+  <button class="submit-form-button" type="submit">Shorten</button>
+</form>
