--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,10 +7,11 @@
 
   width: 400px;
   margin: 30px auto 0;
+  padding: 20px;
 }
 
 .app .title {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   color: #2A2C32;
 }
 
@@ -19,6 +20,40 @@
   margin-top: 0;
 }
 
-.app .content {
-  margin-top: 10px;
+.content {
+  margin-top: 50px;
+}
+
+.submit-form {
+  /* outline: 1px solid red; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 400px;
+}
+
+.submit-form .submit-form-input {
+  width: 92%;
+  height: 25px;
+  margin-bottom: 10px;
+
+  border: 0;
+  background-color: #EBEBEB;
+
+  padding: 3px 8px;
+  color: blue;
+}
+
+.submit-form .submit-form-input::placeholder {
+  color: #C4C4C4;
+}
+
+.submit-form .submit-form-button {
+  width: 40%;
+  height: 25px;
+  background-color: transparent;
+  border: 1px solid #4A82E1;
+  color: #4A82E1;
 }
