--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,7 +43,7 @@
   background-color: #EBEBEB;
 
   padding: 3px 8px;
-  color: blue;
+  color: black;
 }
 
 .submit-form .submit-form-input::placeholder {
