--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
 <form class="submit-form" action="/url" method="post">
-  <input class="submit-form-input" type="text" placeholder="Input URL here" name="original_url">
+  <input class="submit-form-input" type="text" placeholder="Input URL here" name="original_url" required>
   <button class="submit-form-button" type="submit">Shorten</button>
 </form>
