--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,37 +5,43 @@
   flex-direction: column;
   align-items: center;
 
-  width: 400px;
+  width: 450px;
   margin: 30px auto 0;
   padding: 20px;
 }
 
-.app .title {
+.nav {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav .title {
   margin-bottom: 8px;
   color: #2A2C32;
 }
 
-.app .icon {
+.nav .icon {
   width: 70px;
   margin-top: 0;
 }
 
 .content {
   margin-top: 50px;
-}
-
-.submit-form {
-  /* outline: 1px solid red; */
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   width: 400px;
 }
 
+.submit-form,
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%
+}
+
 .submit-form .submit-form-input {
-  width: 92%;
+  width: 90%;
   height: 25px;
   margin-bottom: 10px;
 
@@ -56,4 +62,23 @@
   background-color: transparent;
   border: 1px solid #4A82E1;
   color: #4A82E1;
+}
+
+.result-success-msg,
+.result-url {
+  align-self: flex-start;
+  margin: 0 0 5px;
+}
+
+.result-url {
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+.result-copy-btn {
+  width: 25%;
+  height: 25px;
+  background-color: #4A82E1;
+  border: 1px solid #4A82E1;
+  color: white;
 }
