--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,8 +10,13 @@
 
 <body>
   <div class="app">
-    <h3 class="title">URL Shortener</h3>
-    <img  class="icon" src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="">
+  <header>
+    <a class="nav" href="/">
+      <h3 class="title">URL Shortener</h3>
+      <img  class="icon" src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="">
+    </a>
+  </header>
+
     
     <div class="content">
       {{{ body }}}  
