feat: add redirect to original url function

--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,5 +1,5 @@
 <div class="result">
   <h3 class="result-success-msg">Success! Please use this link:</h3>
-  <a class="result-url" href="/url/{{ code }}">http://localhost:{{ PORT }}/{{ code }}</a>
+  <a class="result-url" href="/{{ code }}">http://localhost:{{ PORT }}/{{ code }}</a>
   <button class="result-copy-btn">Copy</button>
 </div>  
