--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,5 +1,16 @@
 <div class="result">
   <h3 class="result-success-msg">Success! Please use this link:</h3>
   <a class="result-url" href="/{{ code }}">http://localhost:{{ PORT }}/{{ code }}</a>
-  <button class="result-copy-btn">Copy</button>
-</div>  
+  <button class="result-copy-btn" onclick="copy()">Copy</button>
+</div>
+
+<script>
+  function copy() {
+    const copyUrl = document.querySelector('.result-url')
+    const copyBtn = document.querySelector('.result-copy-btn')
+
+    navigator.clipboard.writeText(copyUrl.innerText)
+      .then(() => copyBtn.innerText = 'Copied!')
+      .catch((error) => console.log(error))
+  }
+</script>
