--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,8 @@
 }
 
 .submit-form,
-.result {
+.result,
+.error-message {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,7 +44,7 @@
 .submit-form .submit-form-input {
   width: 90%;
   height: 25px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 
   border: 0;
   background-color: #EBEBEB;
@@ -54,6 +55,13 @@
 
 .submit-form .submit-form-input::placeholder {
   color: #C4C4C4;
+}
+
+.submit-form .submit-form-reminder {
+  margin: 0 10px 10px;
+  align-self: flex-start;
+  font-size: 5px;
+  color: red;
 }
 
 .submit-form .submit-form-button {
@@ -81,4 +89,17 @@
   background-color: #4A82E1;
   border: 1px solid #4A82E1;
   color: white;
+}
+
+.error-message-title {
+  margin: 0 auto;
+}
+
+.error-message-content {
+  margin-bottom: 0;
+}
+
+.error-message-reminder {
+  font-size: 5px;
+  color: red;
 }
